# govsbr

./: Cargo.toml  README.md  package-lock.json  package.json  project_details.md  run_all_tests.sh  test_sbr_demo.sh
Bitcoin_UTXO_Burner/: README.md  bitcoin-utxo-burner.js  bitcoinjs-regtest.js  example.js  package-lock.json  package.json
docs/miniscript-docs/: bech32_^0.11.0.md  bitcoin_0.32.2_x86_64-unknown-linux-gnu_bitcoin_index.html.md  crate_miniscript_latest.md  crate_miniscript_latest_features.md  crate_miniscript_latest_source.md  crate_miniscript_latest_target-redirect_x86_64-unknown-linux-gnu_miniscript_index.html.md  index.md  miniscript_12.3.0_miniscript_index.html.md  miniscript_latest_help.html.md  miniscript_latest_miniscript_all.html.md  miniscript_latest_miniscript_descriptor_enum.Descriptor.html.md  miniscript_latest_miniscript_descriptor_enum.DescriptorPublicKey.html.md  miniscript_latest_miniscript_descriptor_index.html.md  miniscript_latest_miniscript_descriptor_struct.DefiniteDescriptorKey.html.md  miniscript_latest_miniscript_enum.BareCtx.html.md  miniscript_latest_miniscript_enum.Error.html.md  miniscript_latest_miniscript_enum.Legacy.html.md  miniscript_latest_miniscript_enum.Segwitv0.html.md  miniscript_latest_miniscript_enum.SigType.html.md  miniscript_latest_miniscript_enum.Tap.html.md  miniscript_latest_miniscript_enum.TranslateErr.html.md  (+35 more)
src/: policy_analyzer.rs  sbr_lockup.rs  taproot_analysis.rs  tests.rs
test_results/: policy_analyzer_expected.txt  sbr_lockup_expected.txt  taproot_analysis_expected.txt  test_log.txt  test_report.md
(+37 files in other folders)
